# ViralUnity

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CODE_REVIEW_BACKLOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  RELEASING.md  config_diamond_test.yml  environment.yml  pyproject.toml  setup.cfg  setup.py  test_config_file.yml  test_sample_sheet.csv  tmp_empirical_tests.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/WORKFLOWS/: ci.yaml
.github/workflows/: ci.yaml
ENV/: ViralUnit.yml  ViralUnity.yml  main_dependencies_versions.txt  viralunity.yml
SCRIPT/: ViralUnit.sh  ViralUnity.dev.sh  ViralUnity.sh  viralunity.sh
docs/: citation.md  commands.md  conf.py  index.md  installation.md  notes.md  output.md  requirements.in  usage.md
docs-pt/: citacao.md  comandos.md  conf.py  index.md  instalacao.md  notas.md  requirements.in  saida.md  uso.md
docs-pt/_static/: custom.css
docs/_static/: custom.css
docs/dev/: metagenomics-integration.md
docs/tutorial/: consensus.md  index.md  metagenomics.md  setup.md
envs/: vu_dependencies.yml
legacy/: README.md  viralunity.sh
resources/: adapters.fa
scripts/: calculate_assembly_stats.py  consensus.smk  consensus_illumina.smk  consensus_nanopore.smk  create_viralunity_samplesheet.py  mask_consensus.py  metagenomics.smk  metagenomics_nanopore.smk  mutation_mapper.py  viralunity_consensus.py  viralunity_meta.py
test/: calculate_assembly_stats_test.py  config_generator_samples_test.py  create_viralunity_samplesheet_test.py  mutation_mapper_test.py  rename_sequences_test.py  validators_sample_paths_test.py  viralunity_consensus_cli_test.py  viralunity_consensus_test.py  viralunity_create_samplesheet_test.py  viralunity_dryrun_test.py  viralunity_get_databases_cli_test.py  viralunity_meta_cli_test.py  viralunity_meta_test.py  viralunity_path_resolution_test.py
test/dryrun_configs/: consensus_illumina.yaml  consensus_illumina_segmented.yaml  consensus_nanopore.yaml  consensus_nanopore_segmented.yaml  metagenomics_illumina.yaml  (+2 more)
viralunity/: __init__.py  _orchestrator.py  _subprocess.py  calculate_assembly_stats.py  config_generator.py  constants.py  create_viralunity_samplesheet.py  exceptions.py  mutation_mapper.py  qc.smk  rename_sequences.py  validators.py  viralunity_build_deacon_index_cli.py  viralunity_cli.py  viralunity_consensus.py  viralunity_consensus_cli.py  viralunity_create_samplesheet.py  viralunity_get_databases_cli.py  viralunity_meta.py  viralunity_meta_cli.py
(+78 files in other folders)
